--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -3,5 +3,5 @@
 <![endif]-->
 <%= stylesheet_link_tag 'application', :media => 'screen' %>
 <%= stylesheet_link_tag 'application',  :media => 'print' %>
-<!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
+<!--[if lt IE 8]><%= stylesheet_link_tag 'application' %><![endif]-->
 <%= stylesheet_link_tag 'custom', :media => 'screen' %>
