--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,7 +1,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<%= stylesheet_link_tag 'application', :media => 'screen' %>
-<%= stylesheet_link_tag 'application',  :media => 'print' %>
+<%= stylesheet_link_tag 'screen', :media => 'screen' %>
+<%= stylesheet_link_tag 'print',  :media => 'print' %>
 <!--[if lt IE 8]><%= stylesheet_link_tag 'application' %><![endif]-->
 <%= stylesheet_link_tag 'custom', :media => 'screen' %>
